--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,11 +6,11 @@ environment:
     PYTHON_ARCH: "32"
 
     CONAN_REFERENCE: "OpenVDBNativePlugin/0.0.1"
-    CONAN_USERNAME: "kazuki"
-    CONAN_LOGIN_USERNAME: "kazuki"
+    CONAN_USERNAME: "aminubuntu7@gmail.com"
+    CONAN_LOGIN_USERNAME: "aminubuntu7@gmail.com"
     CONAN_CHANNEL: "development"
     VS150COMNTOOLS: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\Common7\\Tools\\"
-    CONAN_UPLOAD: "https://api.bintray.com/conan/kazuki/conan"
+    CONAN_UPLOAD: "https://amintest.jfrog.io/artifactory/api/conan/conan"
 
     matrix:
        # Fix me 
@@ -32,8 +32,8 @@ install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
   - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools
-  - conan user # It creates the conan data directory
-  - conan remote add kazuki https://api.bintray.com/conan/kazuki/conan
+  - conan user -p cmVmdGtuOjAxOjE3MjY0NzM1ODI6WTU0eWdGQnRtSlN0N0R0M2tISFVvQnRTc2Iz -r conan aminubuntu7@gmail.com # It creates the conan data directory
+  - conan remote add conan https://amintest.jfrog.io/artifactory/api/conan/conan
 
 test_script:
   - python build.py
