--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
   - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools
-  - conan user -p cmVmdGtuOjAxOjE3MjY0NzM1ODI6WTU0eWdGQnRtSlN0N0R0M2tISFVvQnRTc2Iz -r conan aminubuntu7@gmail.com # It creates the conan data directory
+  - conan user # It creates the conan data directory
   - conan remote add conan https://amintest.jfrog.io/artifactory/api/conan/conan
 
 test_script:
