--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,8 +30,8 @@ environment:
 
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
-  - pip.exe install conan=1.9.2 --upgrade
-  - pip.exe install conan_package_tools=0.20.0
+  - pip.exe install conan==1.9.2 --upgrade
+  - pip.exe install conan_package_tools==0.20.0
   - conan user # It creates the conan data directory
   - conan remote add conan https://amintest.jfrog.io/artifactory/api/conan/conan
 
